--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
 </head>
 <body>
 
+	<h1>Totally Trivial Trivia!</h1>
 
+	  <div id="startMsg">
+		<h3>Try to answer each question within 30 Seconds! Click the "Start" button to start the game!</h3>
+		<button id="start">Start!</button>
 
+	  </div>
+
+	<h2 id="timer"></h2>
+
+	<div id="questions"></div>
+
+	  <div id="msg1"></div>
+	  <div id="msg2"></div>
+	  <div id="msg3"></div>
+	  <!-- <button id="play">Play Again!</button> -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="assets/javascript/app.js"></script>
 
 </body>
 </html>
