css and more questions added

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
 	<title>Trivia Game - Advanced</title>
 
+	<link href="https://fonts.googleapis.com/css?family=Happy+Monkey|Titan+One|Wendy+One" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
 </head>
 <body>
-
+	<div id="container">
 	<h1>Totally Trivial Trivia!</h1>
 
 	  <div id="startMsg">
-		<h3>Try to answer each question within 30 Seconds! Click the "Start" button to start the game!</h3>
+		<h3>Try to answer each question within 30 Seconds! Click the "Start!" button to start the game!</h3>
 		<button id="start">Start!</button>
 
 	  </div>
@@ -22,7 +24,8 @@
 	  <div id="msg1"></div>
 	  <div id="msg2"></div>
 	  <div id="msg3"></div>
-	  <!-- <button id="play">Play Again!</button> -->
+	</div>	
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="assets/javascript/app.js"></script>
